# tg-park-bot

./: .gitattributes  Cargo.toml  README.md  build.rs  config.sql  db_schema.sql  forward_new_messages.py  sync_from_tg.py
database/: analytics.sql  config.sql  db_schema.sql
scripts/: forward_building.py  forward_new_messages.py  get_inactive_users.py  setup_remote_server.sh  sync_from_tg.py  sync_loop.py
src/: main.rs
