[package]
name = "tg-park-bot"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
tokio-core = "0.1"
sqlite ="0.24"
log = "0.4"
env_logger = "0.6"
lazy_static = "1.2.0"
regex = "1.1.0"


[dependencies.telebot]
git = "https://github.com/bytesnake/telebot/"
rev = "668b61c417fc6e9704885f6c35cbd754109d1ba3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
